# seshat

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  mise.toml  skills-lock.json
.beads/: issues.jsonl
.github/workflows/: ci.yml
config/: node1.toml  node2.toml  node3.toml  node4.toml  node5.toml
crates/common/: Cargo.toml
crates/common/src/: errors.rs  lib.rs  types.rs
crates/kv/: Cargo.toml
crates/kv/src/: lib.rs  operations.rs  raft_node.rs
crates/kv/tests/: integration_tests.rs
crates/protocol/: Cargo.toml  build.rs
crates/protocol-resp/: Cargo.toml
crates/protocol-resp/examples/: buffer_pool_usage.rs
crates/protocol-resp/src/: buffer_pool.rs  codec.rs  command.rs  encoder.rs  inline.rs  lib.rs  parser.rs  types.rs
crates/protocol-resp/tests/: integration_tests.rs  property_tests.proptest-regressions  property_tests.rs
crates/protocol/examples/: buffer_pool_usage.rs
crates/protocol/proto/: raft.proto
crates/protocol/src/: buffer_pool.rs  codec.rs  command.rs  encoder.rs  inline.rs  lib.rs  operations.rs  parser.rs  types.rs
crates/protocol/tests/: integration_tests.rs  property_tests.rs
crates/raft/: Cargo.toml  build.rs
crates/raft/proto/: transport.proto
crates/raft/src/: config.rs  lib.rs  node.rs  state_machine.rs  storage.rs  transport.rs
crates/raft/tests/: integration_tests.rs
crates/raft/tests/common/: mod.rs
crates/resp/: Cargo.toml
crates/resp/examples/: buffer_pool_usage.rs
crates/resp/src/: buffer_pool.rs  codec.rs  command.rs  encoder.rs  error.rs  inline.rs  lib.rs  parser.rs  types.rs
crates/resp/tests/: integration_tests.rs  property_tests.rs
crates/seshat/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage/src/: batch.rs  column_family.rs  error.rs  iterator.rs  lib.rs  openraft_mem.rs  openraft_rocksdb.rs  operations.rs  options.rs  state_machine.rs  storage.rs  storage_iterator_impl.txt  storage_trait.rs  types.rs
crates/storage/tests/: batch_tests.rs  column_family_tests.rs  crud_tests.rs  error_tests.rs  integration_tests.rs  iterator_tests.rs  log_operations_tests.rs  options_tests.rs  property_tests.proptest-regressions  property_tests.rs  snapshot_tests.rs  storage_basic_test.rs  storage_init_tests.rs
docs/: status.md  tasks.md
docs/architecture/: crates.md  data-flow.md  data-structures.md  startup.md
docs/product/: product.md  roadmap.md
docs/specs/: README.md  SPEC_ALIGNMENT_SUMMARY.md
docs/specs/grpc/: context.json  design.json  design.md  plan.json  requirements.json  spec-lite.md  spec.json  spec.md
docs/specs/kvservice/: OPENRAFT_CHANGES.md  design.json  design.md  plan.json  requirements.json  spec-lite.md  spec.json  spec.md
docs/specs/openraft/: design.json  design.md  plan.json  requirements.json  spec-lite.md  spec.json  spec.md  status.md  tasks.md
docs/specs/raft/: context.json  design.md  plan.json  requirements.json  spec.json  spec.md  status.md  tasks.md
docs/specs/resp/: design.md  implementation-plan.json  plan.json  spec-lite.md  spec.md  status.md  tasks.md
docs/specs/rocksdb/: OPENRAFT_CHANGES.md  architectural-solutions.md  context.json  design.json  design.md  plan.json  requirements.json  spec-lite.md  spec.json  spec.md  status.md
docs/standards/: practices.md  style.md  tech.md
