[package]
name = "seshat-kv"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Key-value service implementation for Seshat"
keywords.workspace = true

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
