[package]
name = "seshat-kv"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Key-value service implementation for Seshat"
keywords.workspace = true

[dependencies]
seshat-storage = { path = "../storage" }

[dev-dependencies]
