[package]
name = "seshat-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
