[package]
name = "seshat-raft"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
seshat-common = { path = "../common" }
raft = { version = "0.7", default-features = false, features = ["prost-codec"] }
tokio = { version = "1", features = ["full"] }
