[package]
name = "seshat-raft"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
seshat-common = { path = "../common" }
seshat-protocol = { path = "../protocol" }
raft = { version = "0.7", default-features = false, features = ["prost-codec"] }
prost = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
serde_json = "1"
