[package]
name = "seshat-raft"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
seshat-common = { path = "../common" }
seshat-kv = { path = "../kv" }
raft = { version = "0.7", default-features = false, features = ["prost-codec"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
slog = "2"
log = "0.4"
# prost 0.11 is needed to work with raft-rs's eraftpb types (uses old prost)
prost-old = { package = "prost", version = "0.11" }
# Latest tonic/prost for our transport layer (uses new prost)
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
bytes = "1.5"
thiserror = "1.0"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
serde_json = "1"
tokio-test = "0.4"
