[package]
name = "seshat-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
# raft-rs 0.7 requires prost 0.11 for eraftpb types (Entry, HardState, etc.)
raft = { version = "0.7", default-features = false, features = ["prost-codec"] }

# TODO: Remove after OpenRaft migration (see docs/specs/openraft/)
# This is temporary tech debt to support raft-rs 0.7 which requires prost 0.11
# OpenRaft uses prost 0.14, eliminating this version conflict
prost-old = { package = "prost", version = "0.11" }
